-
Bug
-
Resolution: Done
-
P2: Important
-
5.12
-
None
| For Gerrit Dashboard: QTBUG-69693 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 235527,2 | qdoc: Fix generated C++ and QML type lists | dev | qt/qttools | Status: MERGED | +2 | 0 |
| For Gerrit Dashboard: QTBUG-69693 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 235527,2 | qdoc: Fix generated C++ and QML type lists | dev | qt/qttools | Status: MERGED | +2 | 0 |